school-system/src/main/java/com/example/school/system/error/SchoolExistsExceptionHandler.java
package com.example.school.system.error;

public class SchoolExistsExceptionHandler extends RuntimeException {
    public SchoolExistsExceptionHandler(String message) {
        super(message);
    }

}
